--- a/bintray.gradle
+++ b/bintray.gradle
@@ -45,12 +45,14 @@ bintray {
         userOrg = bintrayGroupName
         desc = libraryDescription
         websiteUrl = siteUrl
+        issueTrackerUrl = issueUrl
         vcsUrl = gitUrl
         licenses = allLicenses
         publish = true
         publicDownloadNumbers = true
         version {
-            desc = libraryDescription
+            desc = versionDescription
+			released  = new Date()
             gpg {
                 sign = true //Determines whether to GPG sign the files. The default is false
                 passphrase = properties.getProperty("bintray.gpg.password")
