--- a/bintray.gradle
+++ b/bintray.gradle
@@ -51,8 +51,8 @@ bintray {
         publish = true
         publicDownloadNumbers = true
         version {
-            desc = versionDescription
-			released  = new Date()
+            desc = versionDesc
+	    released  = new Date()
             gpg {
                 sign = true //Determines whether to GPG sign the files. The default is false
                 passphrase = properties.getProperty("bintray.gpg.password")
