--- a/bintray.gradle
+++ b/bintray.gradle
@@ -47,7 +47,7 @@ bintray {
         websiteUrl = siteUrl
         //issueTrackerUrl = issueUrl
         vcsUrl = gitUrl
-        licenses = allLicenses
+        licenses = ["Apache-2.0"]
         publish = true
         publicDownloadNumbers = true
         version {
@@ -59,5 +59,6 @@ bintray {
                 //Optional. The passphrase for GPG signing'
             }
         }
+	
     }
 }
