--- a/install.gradle
+++ b/install.gradle
@@ -22,8 +22,8 @@ install {
                 // Set your license
                 licenses {
                     license {
-                        name licenseName
-                        url licenseUrl
+                        name 'The Apache Software License,Version 2.0'
+                        url 'http://www.apache.org/liscenses/LICENSE-2.0.txt'
                     }
                 }
                 developers {
